# workspace

./: Stabilizer.drawio  Untitled Diagram.drawio  contact_stability.drawio
Leistung_ws/: .ycm_extra_conf.py
Leistung_ws/bag/: go_and_back.bag  go_and_push.bag  go_nearthan_40.bag  stable.bag
Leistung_ws/devel/: .catkin  .rosinstall  setup.sh
Leistung_ws/devel/include/create_map/: create_map_srv.h  create_map_srvRequest.h  create_map_srvResponse.h
Leistung_ws/devel/include/img_prc/: Dominant.h  DominantRequest.h  DominantResponse.h  Graubild.h  GraubildRequest.h  GraubildResponse.h  Kanten.h  KantenRequest.h  KantenResponse.h  Negbild.h  NegbildRequest.h  NegbildResponse.h
Leistung_ws/devel/include/test_1/: test_1.h  (+5 more)
Leistung_ws/src/create_map/: CMakeLists.txt
Leistung_ws/src/move_control/: CMakeLists.txt
Leistung_ws/src/object_detection/: CMakeLists.txt  package.xml
Leistung_ws/src/qt_connection/: CMakeLists.txt  package.xml
Leistung_ws/src/simple_move/: CMakeLists.txt
Leistung_ws/src/test_1/: CMakeLists.txt
catkin_test/: .ycm_extra_conf.py
catkin_test/devel/: .catkin  .rosinstall  setup.sh
catkin_test/src/tiago_control/: CMakeLists.txt  Readme.txt
forschung_ws/: .ycm_extra_conf.py
forschung_ws/devel/: .catkin  .rosinstall  setup.sh
forschung_ws/src/aruco_detector/: CMakeLists.txt  package.xml
roboCupHome/: .ycm_extra_conf.py
roboCupHome/devel/: .catkin  .rosinstall  setup.sh
roboCupHome/src/1_Huiwen/tutorial4/: CMakeLists.txt
roboCupHome/src/1_Huiwen/tutorial4/src/: PlaneSegmentation.cpp
roboCupHome/src/turtle_vis/: CMakeLists.txt
(+480 files in other folders)
